# Curl-Programming

./: README.md  ai_module.py  curl_programming_language_basics.txt  errors.py  interpreter.py  lexer.py  main.py  parser.py  pyproject.toml  sample.curl  test_ai.curl  test_all.curl
.github/workflows/: publish.yml
